finish about me section

--- a/index.html
+++ b/index.html
@@ -14,21 +14,67 @@
         <nav class="nav-menu">
           <img class="logo" src="./assets/logo_gusgluna.svg" alt="gusgluna" />
           <ul>
-            <li>Home</li>
-            <li>About me</li>
-            <li>Work</li>
-            <li>Blog</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Blog</a></li>
           </ul>
         </nav>
       </div>
     </header>
+
     <section class="hero">
-        <div class="container">
-          <h1>Front-end Devolper</h1>
-          <p>
-            keep it simple, make it useful & code it clean.
-          </p>
-        </div>
+      <div class="container">
+        <h2>gusgluna</h2>
+        <h1>Front-end Devolper</h1>
+        <p>keep it simple, make it useful & code it clean.</p>
+      </div>
     </section>
+
+    <section class="about-me">
+      <div class="container">
+        <h3>Hi I'm gus, thanks for visit my site</h3>
+        <div class="wrapper">
+          <p>
+            I'm a self taught developer, i started to code by hobby and fun,
+            after three years working on fields related to my degree that is
+            mehcanical engineer i felt stuck and i decided to change my carrer
+            to tech industry because i found me enjoyed more when i code than
+            when i doing my regular work, i love to code and i wanna be part of
+            the future...
+          </p>
+
+          <section class="my-skills">
+            <span class="sub-title1">My skills</span>
+            <!-- <img src="./assets/terminal.svg" alt="screen" /> -->
+            <div class="icon-terminal"></div>
+            <span class="sub-title2">Languages:</span>
+            JavaScript, HTML, CSS, SASS, Tailwind <br />
+            ReactJS, NodeJS, MongoDB, SQL & Python.
+            <div class="icon-tools"></div>
+            <span class="sub-title2"> Tools: </span>
+            VSCode, VIM, Github, <br />
+            NPM & Terminal.
+          </section>
+        </div>
+      </div>
+    </section>
+
+    <section class="my-work">
+      <div class="container">
+        <h3>My Work</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis id sunt
+          nobis ad nulla, odio ratione laborum facilis et repellendus unde quod
+          ex totam voluptatum amet, numquam deleniti laboriosam aliquid quasi
+          porro veniam assumenda. Qui aliquid dolorum deleniti asperiores
+          blanditiis!
+        </p>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">&copy; gusgluna</div>
+    </footer>
   </body>
 </html>
