--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container">
         <h2>gusgluna</h2>
         <h1>Front-end Devolper</h1>
-        <p>keep it simple, make it useful & code it clean.</p>
+        <p>Keep it simple, make it useful & code it clean.</p>
       </div>
     </section>
 
@@ -38,7 +38,7 @@
           <p>
             I'm a self taught developer, i started to code by hobby and fun,
             after three years working on fields related to my degree that is
-            mehcanical engineer i felt stuck and i decided to change my carrer
+            mehcanical engineer i felt stuck and i decided to change my career
             to tech industry because i found me enjoyed more when i code than
             when i doing my regular work, i love to code and i wanna be part of
             the future...
@@ -74,7 +74,76 @@
     </section>
 
     <footer class="footer">
-      <div class="container">&copy; gusgluna</div>
+      <div class="container">
+        <div class="social">
+          lets chat!
+          <ul>
+            <li>
+              <a
+                href="https://github.com/gusgluna"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./assets/github_logo.svg"
+                  alt="github"
+                  class="media-logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://twitter.com/gusgluna"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./assets/twitter_logo.svg"
+                  alt="twitter"
+                  class="media-logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/gusgluna/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./assets/linkedin_logo.svg"
+                  alt="linkedin"
+                  class="media-logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/gusgluna/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./assets/instagram_logo.svg"
+                  alt="instagram"
+                  class="media-logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="mailto:gusgluna@gmail.com" rel="noopener noreferrer">
+                <img
+                  src="./assets/mail_me.svg"
+                  alt="mail"
+                  class="media-logo"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <p>coded by gusgluna &copy; 2021</p>
+      </div>
     </footer>
   </body>
 </html>
