changin folder name and adding my work cards

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/logo_gusgluna.svg" type="image/svg" />
+    <link rel="icon" href="./img/logo_gusgluna.svg" type="image/svg" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>gusgluna | Developer & content creator</title>
+    <title>gusgluna | web developer</title>
   </head>
   <body>
     <header class="header">
       <div class="container">
         <nav class="nav-menu">
-          <img class="logo" src="./assets/logo_gusgluna.svg" alt="gusgluna" />
+          <img class="logo" src="./img/logo_gusgluna.svg" alt="gusgluna" />
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About me</a></li>
@@ -45,8 +45,7 @@
           </p>
 
           <section class="my-skills">
-            <span class="sub-title1">My skills</span>
-            <!-- <img src="./assets/terminal.svg" alt="screen" /> -->
+            <span class="sub-title1">My Skills</span>
             <div class="icon-terminal"></div>
             <span class="sub-title2">Languages:</span>
             JavaScript, HTML, CSS, SASS, Tailwind <br />
@@ -63,13 +62,33 @@
     <section class="my-work">
       <div class="container">
         <h3>My Work</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis id sunt
-          nobis ad nulla, odio ratione laborum facilis et repellendus unde quod
-          ex totam voluptatum amet, numquam deleniti laboriosam aliquid quasi
-          porro veniam assumenda. Qui aliquid dolorum deleniti asperiores
-          blanditiis!
-        </p>
+        <section>
+          <div class="card">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
+              ratione eius rerum possimus quia ullam.
+            </p>
+          </div>
+          <div class="card">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
+              ratione eius rerum possimus quia ullam.
+            </p>
+          </div>
+          <div class="card pokedex">
+            <p>
+              I code a pokedex using the pokeAPI, coded whit vanilla JS, CSS and
+              HTML. <br /><br />
+              <a
+                href="https://gusgluna.github.io/pokedex/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Check it out...
+              </a>
+            </p>
+          </div>
+        </section>
       </div>
     </section>
 
@@ -85,7 +104,7 @@
                 rel="noopener noreferrer"
               >
                 <img
-                  src="./assets/github_logo.svg"
+                  src="./img/github_logo.svg"
                   alt="github"
                   class="media-logo"
                 />
@@ -98,7 +117,7 @@
                 rel="noopener noreferrer"
               >
                 <img
-                  src="./assets/twitter_logo.svg"
+                  src="./img/twitter_logo.svg"
                   alt="twitter"
                   class="media-logo"
                 />
@@ -111,7 +130,7 @@
                 rel="noopener noreferrer"
               >
                 <img
-                  src="./assets/linkedin_logo.svg"
+                  src="./img/linkedin_logo.svg"
                   alt="linkedin"
                   class="media-logo"
                 />
@@ -124,7 +143,7 @@
                 rel="noopener noreferrer"
               >
                 <img
-                  src="./assets/instagram_logo.svg"
+                  src="./img/instagram_logo.svg"
                   alt="instagram"
                   class="media-logo"
                 />
@@ -132,11 +151,7 @@
             </li>
             <li>
               <a href="mailto:gusgluna@gmail.com" rel="noopener noreferrer">
-                <img
-                  src="./assets/mail_me.svg"
-                  alt="mail"
-                  class="media-logo"
-                />
+                <img src="./img/mail_me.svg" alt="mail" class="media-logo" />
               </a>
             </li>
           </ul>
