changind sections height

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./img/logo_gusgluna.svg" type="image/svg" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>gusgluna | web developer</title>
+    <title>gusgluna | Web Developer</title>
   </head>
   <body>
     <header class="header">
@@ -36,10 +36,10 @@
         <h3>Hi I'm gus, thanks for visit my site</h3>
         <div class="wrapper">
           <p>
-            I'm a self taught developer, i started to code by hobby and fun,
+            I'm a self taught developer, i started to code by hobby,
             after three years working on fields related to my degree that is
             mehcanical engineer i felt stuck and i decided to change my career
-            to tech industry because i found me enjoyed more when i code than
+            to tech industry, because i found me enjoyed more when i code than
             when i doing my regular work, i love to code and i wanna be part of
             the future...
           </p>
