adding functionality to nav var

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <nav class="nav-menu">
           <img class="logo" src="./img/logo_gusgluna.svg" alt="gusgluna" />
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About me</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about-me">About me</a></li>
+            <li><a href="#work">My Work</a></li>
             <li><a href="#">Blog</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="hero">
       <div class="container">
         <h2>gusgluna</h2>
         <h1>Front-end Devolper</h1>
@@ -31,17 +31,17 @@
       </div>
     </section>
 
-    <section class="about-me">
+    <section class="about-me" id="about-me">
       <div class="container">
         <h3>Hi I'm gus, thanks for visit my site</h3>
         <div class="wrapper">
           <p>
-            I'm a self taught developer, i started to code by hobby,
-            after three years working on fields related to my degree that is
-            mehcanical engineer i felt stuck and i decided to change my career
-            to tech industry, because i found me enjoyed more when i code than
-            when i doing my regular work, i love to code and i wanna be part of
-            the future...
+            I'm a self taught developer, i started to code by hobby, after three
+            years working on fields related to my degree that is mehcanical
+            engineer i felt stuck and i decided to change my career to tech
+            industry, because i found me enjoyed more when i code than when i
+            doing my regular work, i love to code and i wanna be part of the
+            future...
           </p>
 
           <section class="my-skills">
@@ -53,27 +53,21 @@
             <div class="icon-tools"></div>
             <span class="sub-title2"> Tools: </span>
             VSCode, VIM, Github, <br />
-            NPM & Terminal.
+            NPM, Linux & Terminal.
           </section>
         </div>
       </div>
     </section>
 
-    <section class="my-work">
+    <section class="my-work" id="work">
       <div class="container">
         <h3>My Work</h3>
         <section>
           <div class="card">
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
-              ratione eius rerum possimus quia ullam.
-            </p>
+            <p>Coming Soon...</p>
           </div>
           <div class="card">
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam,
-              ratione eius rerum possimus quia ullam.
-            </p>
+            <p>Coming Soon...</p>
           </div>
           <div class="card pokedex">
             <p>
