mobile devices responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="nav-menu">
           <img class="logo" src="./img/logo_gusgluna.svg" alt="gusgluna" />
           <ul>
-            <li><a href="#hero">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about-me">About me</a></li>
             <li><a href="#work">My Work</a></li>
             <li><a href="#">Blog</a></li>
@@ -23,7 +23,7 @@
       </div>
     </header>
 
-    <section class="hero" id="hero">
+    <section class="hero" id="home">
       <div class="container">
         <h2>gusgluna</h2>
         <h1>Front-end Devolper</h1>
